--- a/content/assignment/04-lab.Rmd
+++ b/content/assignment/04-lab.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Lab 04 - Exploratory Data Analysis"
+title: "Lab 04 - Data Visualization"
 output: html_document
 link-citations: yes
 ---
@@ -48,6 +48,21 @@ met <- data.table::fread("met_all.gz")
 - Create a categorical variable for elevation as in the lecture slides
 
 ```{r}
+met <- data.table::fread("/Users/meredith/Dropbox (University of Southern California)/Courses/PM566/met_all.gz")
+met<-met[met$temp > -17]
+met[met$elev==9999.0] <- NA
+
+met_avg<-met[,.(temp=mean(temp,na.rm=TRUE), rh=mean(rh,na.rm=TRUE), wind.sp=mean(wind.sp,na.rm=TRUE), 
+                vis.dist=mean(vis.dist,na.rm=TRUE), dew.point = mean(dew.point, na.rm=TRUE), lat=mean(lat), lon=mean(lon), 
+                elev=mean(elev,na.rm=TRUE)), by="USAFID"]
+
+met_avg$elev_cat <- ifelse(met_avg$elev> 252, "high", "low")
+
+met_avg$region <- ifelse(met_avg$lon > -98 & met_avg$lat >39.71, "north east",
+                         ifelse(met_avg$lon > -98 & met_avg$lat < 39.71, "south east",
+                                ifelse(met_avg$lon < -98 & met_avg$lat >39.71, "north west", "south west")))
+
+table(met_avg$region)
 
 ```
 
@@ -57,8 +72,20 @@ met <- data.table::fread("met_all.gz")
 - Make sure to deal with `NA` category
 - Describe what you observe in the graph
 ```{r}
+met_avg %>%
+  filter(!(region %in% NA)) %>%
+ggplot()+
+  geom_boxplot(mapping = aes(y=dew.point, fill=region)) +
+  facet_wrap(~region, nrow=2)
 
+met_avg %>%
+  filter(!(region %in% NA)) %>%
+ggplot()+
+  geom_boxplot(mapping = aes(y=rh, fill=region)) +
+  facet_wrap(~region, nrow=2)
 ```
+ - Dew point temperature is higher in the south east....
+ - Relative humidity....
 
 ### 4. Use `geom_point` with `stat_smooth` to examine the association between dew point temperature and relative humidity by region
 
@@ -68,8 +95,15 @@ met <- data.table::fread("met_all.gz")
 - Describe what you observe in the graph
 
 ```{r}
-
+met_avg %>%
+filter(!(region %in% NA)) %>%
+  ggplot(mapping = aes(x=dew.point, y=rh, color=region))+
+  geom_point()+
+  stat_smooth(method=lm)
+  
 ```
+- The association between dew point and relative humidity is positive in all regions (an increase dew.point is associated with an increase in rh)
+- Regional observations
 
 ### 5. Use `geom_bar` to create barplots of the weather stations by elevation category coloured by region
 
@@ -77,8 +111,16 @@ met <- data.table::fread("met_all.gz")
 - Change colours from the default. Colour by region using `scale_fill_brewer` see [this](http://rstudio-pubs-static.s3.amazonaws.com/5312_98fc1aba2d5740dd849a5ab797cc2c8d.html)
 - Create nice labels on axes and add a title
 - Describe what you observe in the graph
+- Make sure to deal with `NA`
 
 ```{r warning=FALSE, message=FALSE}
+met_avg %>%
+filter(!(region %in% NA)) %>%
+  ggplot()+
+  geom_bar(mapping=aes(x=elev_cat,fill=region))+
+  scale_fill_brewer(palette = "PuOr")+
+  labs(title="Number of weather stations by elevation category and region", x="Elevation Category", y= "Count")+
+  theme_bw()
 
 ```
 
@@ -89,8 +131,14 @@ met <- data.table::fread("met_all.gz")
 - Describe the graph and what you observe
 
 ```{r}
-
+met_avg %>%
+filter(!(region %in% NA)) %>%
+  ggplot(mapping=aes(x=region, y=dew.point))+
+  stat_summary(fun.data="mean_sdl")
+  
 ```
+- Dew point temperature is....describe dots and bars
+- Relative humidity is...
 
 ### 7. Make a map showing the spatial trend in relative humidity in the US
 
@@ -100,11 +148,52 @@ met <- data.table::fread("met_all.gz")
 - Add a legend
 
 ```{r}
+met_avg2<-met_avg[!is.na(rh)]
+rh_pal = colorNumeric(c('blue','purple','red'), domain=met_avg2$rh)
+leaflet(met_avg2) %>%
+  addProviderTiles('OpenStreetMap') %>%
+  addCircles(lat=~lat, lng=~lon, color=~rh_pal(rh), label=~paste0(round(rh,2), ' rh'), opacity=1,fillOpacity=1, radius=500) %>%
+  addLegend('bottomleft',pal=rh_pal, values=met_avg2$rh, title="Relative Humidity", opacity=1)
 
 ```
+- Describe trend in RH across the US
 
 ### 8. Use a ggplot extension
 
 - Pick and extension (except cowplot) from [here](https://exts.ggplot2.tidyverse.org/gallery/) and make a plot of your choice using the met data (or met_avg)
 - Might want to try examples that come with the extension first (e.g. ggtech, gganimate, ggforce)
 
+```{r}
+
+library(ggstance)
+
+ggplot(mpg, aes(hwy, class, fill = factor(cyl))) +
+  geom_boxploth()
+
+met_avg %>%
+filter(!(region %in% NA)) %>%
+ggplot(mapping= aes(x=dew.point, y=region, fill=region)) +
+  geom_boxploth()
+
+
+library(ggthemes)
+
+met_avg %>%
+filter(!(region %in% NA)) %>%
+  ggplot(mapping=aes(x=region, y=dew.point))+
+  stat_summary(fun.data="mean_sdl")+
+  theme_fivethirtyeight()
+
+met_avg %>%
+filter(!(region %in% NA)) %>%
+  ggplot(mapping = aes(x=dew.point, y=rh, color=region))+
+  geom_point()+
+  stat_smooth(method=lm)+
+  theme_economist()
+
+# to save/write data locally
+# write.csv(met_avg, "/Documents/.../met_avg.csv",row.names=T)
+# saveRDS(met_avg,"/Documents/.../met_avg.rds")
+
+
+```
