--- a/static/slides/05-data-wrangling/slides.Rmd
+++ b/static/slides/05-data-wrangling/slides.Rmd
@@ -2,14 +2,25 @@
 title: "Week 5: Data Wrangling"
 subtitle: "PM 566: Introduction to Health Data Science"
 author: "George G. Vega Yon"
+# output:
+  # slidy_presentation:
+  #   slide_level: 1
 output:
-  slidy_presentation:
-    slide_level: 1
+  xaringan::moon_reader:
+    css: ["theme.css", "default"]
+    lib_dir: libs
+    nature:
+      beforeInit: "macros.js"
+      ratio: "16:9"
+      highlightStyle: github
+      highlightLines: true
+      countIncrementalSlides: false
+      titleSlideClass: [center, middle]
 ---
 
 ```{r setup, echo = FALSE}
 knitr::opts_chunk$set(eval = TRUE, results = "hold")
-slides_eval <- FALSE
+slides_eval <- TRUE
 ```
 
 
@@ -128,7 +139,7 @@ Before we continue, let's learn a bit more on `data.table` and `dtplyr`
 
 ---
 
-## `data.table` and `dtplyr`:Data Table's Syntax
+## `data.table` and `dtplyr`: Data Table's Syntax
 
 - As you have seen in previous lectures, in `data.table` all happens within the
 square brackets. Here is common way to imagine DT:
@@ -142,35 +153,34 @@ square brackets. Here is common way to imagine DT:
   
 ---
 
-## `data.table` and `dtplyr`:Data Table's Syntax
+## `data.table` and `dtplyr`: Data Table's Syntax
 
-- Operations applied in **j** are evaluated *within* the data, meaning that
-  names work as symbols. e.g.
+Operations applied in **j** are evaluated *within* the data, meaning that
+names work as symbols, e.g.,
   
-  ```{r error-j, eval=FALSE}
-  data(USArrests)
-  USArrests_dt <- data.table(USArrests)
-  
-  # This returns an error
-  USArrests[, Murder]
-  
-  # This works fine
-  USArrests_dt[, Murder]
-  ```
-  
-  Furthermore, we can do things like this:
+```{r error-j, eval=FALSE}
+data(USArrests)
+USArrests_dt <- data.table(USArrests)
+
+# This returns an error
+USArrests[, Murder]
+
+# This works fine
+USArrests_dt[, Murder]
+```
+
+Furthermore, we can do things like this:
   
 ```{r load-usarrests, echo = FALSE}
 data("USArrests")
 USArrests_dt <- data.table(USArrests)
 ```
   
-  
-  ```{r plot-usarrests}
-  USArrests_dt[, plot(Murder, UrbanPop)]
-  ```
-  
-  
+
+```{r plot-usarrests}
+USArrests_dt[, plot(Murder, UrbanPop)]
+```
+
 
 ---
 
@@ -205,23 +215,52 @@ Question: What is the `immutable = FALSE` option used for?
 
 ## Selecting columns
 
-How can we select the columns `USAFID`, `lat`, and `lon`
+How can we select the columns `USAFID`, `lat`, and `lon`, using `data.table`:
 
 ```{r select1-dt, eval = slides_eval}
-# data.table
 dat[, list(USAFID, lat, lon)]
+# dat[, .(USAFID, lat, lon)]       # Alternative 1
+# dat[, c("USAFID", "lat", "lon")] # Alternative 2
+```
 
-# dplyr verb
+What happens if instead of `list()` you used `c()`?
+
+---
+
+## Selecting columns (cont. 1)
+
+Using the **dplyr::select** verb:
+
+```{r select1-tv, eval = slides_eval}
 dat_ldt %>% select(USAFID, lat, lon)
 ```
 
-In the case of `data.table`, What happens if instead of `list()` you used `c()`? Now, in Python
+---
+
+## Selecting columns (cont. 2)
+
+In the case of `pydatatable`
 
 ```{python select1-py, eval = slides_eval}
 dat[:,["USAFID", "lat", "lon"]]
 ```
 
 What happens if instead of `["USAFID", "lat", "lon"]` you used `{"USAFID", "lat", "lon"}` (vector vs set).
+
+---
+
+For the rest of the session we will be using these variables:
+USAFID, WBAN, year, month, day, hour, min, lat, lon, elev, wind.sp, temp, and atm.press.
+
+```{r actual-selection}
+# Data.table
+dat <- dat[,
+  .(USAFID, WBAN, year, month, day, hour, min, lat, lon, elev,
+    wind.sp, temp, atm.press)]
+
+# Need to redo the lazy table
+dat_ldt <- lazy_dt(dat)
+```
 
 ---
 
@@ -350,20 +389,26 @@ Need to select records according to some criteria. For example:
 - Above latitude 40, and
 - Elevation outside the range 500 and 1,000.
 
+The logical expressions would be
+
+- `(day == 1)` 
+- `(lat > 40)`
+- `((elev < 500) | (elev > 1000))`
+
+Respectively.
+
 ---
 
-In R with `data.table`
-
-- `(day == 1)` First day of the month, and
-- `(lat > 40)` Above latitude 40, and
-- `((elev < 500) | (elev > 1000))` Elevation outside the range 500 and 1,000.
+In R with `data.table`:
 
 ```{r filter1-dt1, eval = slides_eval}
 dat[(day == 1) & (lat > 40) & ((elev < 500) | (elev > 1000))] %>%
   nrow()
 ```
 
-In R with `dtplyr`
+---
+
+In R with **dplyr::filter()**:
 
 ```{r filter1-tv, eval = slides_eval}
 dat_ldt %>%
@@ -381,9 +426,6 @@ import datatable as dt
 dat = dt.fread("met.gz")
 ```
 
-- `(dt.f.day == 1)` First day of the month, and
-- `(dt.f.lat > 40)` Above latitude 40, and
-- `((dt.f.elev < 500) | (dt.f.elev > 1000))` Elevation outside the range 500 and 1,000.
 
 ```{python filter1-py, eval = slides_eval}
 dat[(dt.f.day == 1) & (dt.f.lat > 40) & ((dt.f.elev < 500) | (dt.f.elev > 1000)), :].nrows
@@ -407,7 +449,7 @@ that allows accessing column names in a datatable's `Frame`.
 3. Following the previous question, plot a sample of 1,000 of `(lat, lon)` of the
    stations with temp as NA and those with data.
 
---- 
+---
 
 ## Solutions
 
@@ -515,7 +557,11 @@ dat[, windsp_scaled := wind.sp/sd(wind.sp, na.rm = TRUE)]
 # dat[, c("elev2", "windsp_scaled") := .(elev^2, wind.sp/sd(wind.sp,na.rm=TRUE)) ]
 ```
 
-With dtplyr
+---
+
+## Variable creation (cont. 1)
+
+With the verb **dplyr::mutate()**:
 
 ```{r eval=slides_eval}
 dat[, c("elev2", "windsp_scaled") := NULL] # This to delete these variables
@@ -527,6 +573,51 @@ dat_ldt %>%
 ```
 
 Notice that, since `dat_ldt` is a pointer, the variables are now in `dat`.
+
+---
+
+## Variable creation (cont. 2)
+
+Imagine that we needed to generate all those calculations (scale by sd) on many more variables.
+We could then use the **.SD** symbol:
+
+```{r var-new-dt2}
+# Listing the names
+in_names  <- c("wind.sp", "temp", "atm.press")
+out_names <- paste0(in_names, "_scaled")
+dat[,
+    c(out_names) := lapply(.SD, function(x) x/sd(x, na.rm = TRUE)), 
+    .SDcols = in_names
+    ]
+
+# Looking at the first 6
+head(dat[, .SD, .SDcols = out_names], n = 4)
+```
+
+Key things to notice here: **c(out_names)**, **.SD**, and **.SDCols**.
+
+---
+
+## Variable creation (cont. 3)
+
+In the case of dplyr, we could use the following
+
+```{r var-new-tv2}
+as_tibble(dat_ldt) %>%
+  mutate(
+    across(
+      all_of(in_names),
+      sd,
+      .names = "{col}_scaled2",
+      na.rm = TRUE)
+  ) %>%
+  # Just to print the last columns
+  select(ends_with("_scaled2")) %>%
+  head(n = 4)
+```
+
+Key thing here: This approach has no direct translation to `data.table`, which
+is why we used **as_tibble()**.
 
 ---
 
@@ -558,7 +649,7 @@ stations <- unique(stations[, list(USAF, CTRY, STATE)])
 # Dropping NAs
 stations <- stations[!is.na(USAF)]
 
-head(stations)
+head(stations, n = 4)
 ```
 
 Notice the function `fifelse()`. Now, let's try to merge the data!
@@ -608,7 +699,7 @@ dat <- merge(
   all.y = FALSE
   )
 
-head(dat[, list(USAFID, WBAN, STATE)])
+head(dat[, list(USAFID, WBAN, STATE)], n = 4)
 ```
 
 What happens when you change the options `all.x` and `all.y`?
@@ -630,8 +721,8 @@ merge(x = dat, y = stations, by.x = "USAFID", by.y = "USAF",all.x = FALSE, all.y
   average, we could use **by** together with the **data.table::fcoalesce()** function:
   
   ```{r group-dt1, eval = TRUE}
-  # Generating a date component
-  dat[, temp_imp := fcoalesce(temp, mean(temp, na.rm = TRUE)), by = .(month, day, year, STATE)]
+  dat[, temp_imp := fcoalesce(temp, mean(temp, na.rm = TRUE)),
+    by = .(STATE, year, month, day)]
   ```
 
 - In the case of dplyr, we can do the following using **dplyr::group_by** together
@@ -642,7 +733,7 @@ merge(x = dat, y = stations, by.x = "USAFID", by.y = "USAF",all.x = FALSE, all.y
   dat_ldt <- lazy_dt(dat, immutable = FALSE)
   
   dat_ldt %>%
-    group_by(month, day, year, STATE) %>%
+    group_by(STATE, year, month, day) %>%
     mutate(
       temp_imp2 = coalesce(temp, mean(temp, na.rm = TRUE))
       ) %>% compute()
@@ -655,7 +746,7 @@ merge(x = dat, y = stations, by.x = "USAFID", by.y = "USAF",all.x = FALSE, all.y
 Let's see how it looks like
 
 ```{r plot-groupped}
-dat[USAFID == 720172][order(USAFID, year, month, day)][{
+dat[USAFID == 720172][order(year, month, day)][, {
   op <- par(mfrow = c(1, 2))
   plot(temp, type = "l", col = "tomato")
   plot(temp_imp, type = "l", col = "steelblue")
@@ -665,50 +756,58 @@ dat[USAFID == 720172][order(USAFID, year, month, day)][{
 
 ---
 
-```{r eval=FALSE}
-dat[,
-  list(
-    wind.sp   = mean(wind.sp, na.rm = TRUE),
-    temp      = mean(temp, na.rm = TRUE),
-    atm.press = mean(atm.press, na.rm = TRUE)
-  ), by = c("USAFID", "Date")
-  ]
+## Aggregating data: Summary table
 
-head(dat)
-```
+- Using `by` also allow us creating summaries of our data.
 
+- For example, if we wanted to compute the average temperature, wind-speed, and
+  atmospheric preassure by state, we could do the following
+  
+  ```{r by-state-dt}
+  dat[, .(
+    temp_avg      = mean(temp, na.rm=TRUE),
+    wind.sp_avg   = mean(wind.sp, na.rm=TRUE),
+    atm.press_avg = mean(atm.press, na.rm = TRUE)
+    ),
+    by = STATE
+    ][order(STATE)] %>% head(n = 4)
+  ```
+  
 ---
 
-The previous is equivalent to write (compare both using the `identical()` function in R)
+## Aggregating data: Summary table (cont. 1)
 
-```r
-dat_daily2 <- dat[
-  ,
-  .(
-    wind.sp   = mean(wind.sp, na.rm = TRUE),
-    temp      = mean(temp, na.rm = TRUE),
-    atm.press = mean(atm.press, na.rm = TRUE)
-  ),
-  by = .(USAFID, Date)
-]
-```
+When dealing with too many variables, we can use the `.SD` special symbol in `data.table`:
 
----
-
-When dealing with too many variables, we can use the `.SD` special symbol:
-
-
-```{r group-dt2, eval = FALSE}
+```{r group-dt2, eval = TRUE}
 # Listing the names
 in_names  <- c("wind.sp", "temp", "atm.press")
 out_names <- paste0(in_names, "_avg")
 
 dat[,
-  c(out_names) := lapply(.SD, mean, na.rm = TRUE),
-  .SDcols = in_names,
-  by      = c("USAFID", "Date")
-  ]
+  setNames(lapply(.SD, mean, na.rm = TRUE), out_names),
+  .SDcols = in_names, keyby   = STATE
+  ] %>% head(n = 4)
 ```
+
+Notice the **keyby** option here: "Group by STATE and order by STATE".
+
+---
+
+## Aggregating data: Summary table (cont. 2)
+
+- Using **dplyr** verbs  
+  
+  ```{r by-state-tv}
+  dat_ldt %>% group_by(STATE) %>%
+    summarise(
+      temp_avg      = mean(temp, na.rm=TRUE),
+      wind.sp_avg   = mean(wind.sp, na.rm=TRUE),
+      atm.press_avg = mean(atm.press, na.rm = TRUE)
+    ) %>% arrange(STATE) %>% head(n = 4)
+  ```
+  
+  Notice the `arrange()` function.
 
 ---
 
@@ -732,32 +831,6 @@ dat[,
 
 ---
 
-## Scenarios
-
-1. The 9, 99, 999, ... coding for missigness.
-
-2. The data contains dates
-
-3. The data is a panel dataset with various measures per unit, and we need to create a lag
-
-4. Need to create some summaries at the group level
-
-5. Have two datasets and need to merge them by one or more keys/indices/ids.
-
-6. Create a running mean spanning the last 7 observations.
-
----
-
-## Data Management: data.table
-
-The data.table package:
-
-- Is very fast
-- Is memory efficient
-- Is 
-
----
-
 ## Benchmarks
 
 - [H2O.ai](https://www.h2o.ai/)'s benchmark ([link](https://h2oai.github.io/db-benchmark/)): Designed by
@@ -765,61 +838,5 @@ The data.table package:
 
 - [RStudio's](https://rstudio.com) benchmark ([link](https://cran.r-project.org/web/packages/vroom/vignettes/benchmarks.html)):
   Designed as part of the benchmarks with the [vroom](https://cran.r-package.org/package=vroom) package.
-
----
-
-```{r eval=FALSE}
-# Monthly average temperature plot
-library(ggplot2)
-library(akima)
-dat_daily_plot <- with(
-  dat_daily[mday(Date) == 1 & is.finite(temp_avg)],
-  akima::interp(
-    x = lon, y = lat, z = temp_avg
-  )
-)
-
-image(dat_daily_plot)
-```
-
----
-
-```{r, eval = FALSE}
-library(dtplyr)
-library(dplyr)
-data(diamonds, package="ggplot2")
-dt_tibble <- lazy_dt(diamonds)
-dt_dt     <- lazy_dt(as.data.table(diamonds))
-dt        <- as.data.table(diamonds)
-microbenchmark::microbenchmark(
-  dplyr         = diamonds %>% group_by(carat) %>% summarise(mean(price), .groups="drop") %>% collect(),
-  dtplyr_tibble = dt_tibble %>% group_by(carat) %>% summarise(mean(price)) %>% collect(),
-  dtplyr_dt     = dt_dt %>% group_by(carat) %>% summarise(mean(price), .groups="drop") %>% collect(),
-  data.table    = dt[, mean(price), by = carat]
-)
-
-```
-
-```{r, eval = FALSE}
-tmp <- tempfile(fileext="csv")
-download.file(
-  "https://raw.githubusercontent.com/Rdatatable/data.table/master/vignettes/flights14.csv",
-  destfile = tmp,
-  method   = "libcurl",
-  timeout  = 1000
-  )
-dat_dt <- fread(tmp)
-dat_tb <- as_tibble(dat_dt)
-dat_lz <- lazy_dt(dat_tb)
-```
-
-
-```{r, eval = FALSE}
-microbenchmark::microbenchmark(
-  dplyr         = dat_tb %>% group_by(dest) %>% summarise(mean(air_time), .groups="drop") %>% collect(),
-  dtplyr_tibble = dat_lz %>% group_by(dest) %>% summarise(mean(air_time), .groups="drop") %>% collect(),
-  data.table    = dat_dt[, mean(air_time), by = dest], times = 100
-)
-```
 
 
