--- a/content/assignment/05-lab.Rmd
+++ b/content/assignment/05-lab.Rmd
@@ -1,226 +1,138 @@
 ---
-title: "Lab 02 - GitHub"
-output: tufte::tufte_html
-link-citations: yes
+title: "Lab 05 - Data Wrangling"
+output: html_document
 ---
 
 # Learning goals
 
-In this lab, you are expected to learn/put in practice the following skills:
+- Use the `merge()` function to join two datasets.
+- Deal with missings and impute data.
+- Identify relevant observations using `quantile()`.
+- Practice your GitHub skills.
 
-- Forking on GitHub
-- Git workflow clone/commit/push
-- Using pull requests (PR)
+# Lab description
 
-The last bit of the lab will deal with GitHub Classrooms. While this is not a
-fundamental tool for academia/industry, we will be using this tool throughout
-the course, meaning that your grade will depend on it :).
+For this lab we will be, again, dealing with the meteorological dataset downloaded from the NOAA, the `met`. In this case, we will use `data.table` to answer some questions regarding the `met` dataset, while at the same time practice your Git+GitHub skills for this project.
 
-# Updating a single repo
+This markdown document should be rendered using `github_document` document.
 
-One of the most common tasks that people uses git for is for collaborating. While
-in general team members organize such that there are no overlapping editing of
-the files, git is smart enough to avoid clashes when multiple edits are done in
-the same document[^multiedits]. To show this, we will do a collaborative edit of
-a file!
+# Part 1: Setup the Git project and the GitHub repository
 
-[^multiedits]: Team-members could be working on the same file but editing
-different lines of code. If this is the case, after pull/push, git will integrate
-the changes without conflicts.
+1. Go to your documents (or wherever you are planning to store the data) in your computer, and create a folder for this project, for example, "PM566-lab05"
 
-We will be working with the repository `TBD`
+2. In that folder, save [this template]() as "README.Rmd". This will be the markdown file where all the magic will happen.
 
-## Step 1: For the project in your repo
+3. Go to your GitHub account and create a new repository, hopefully of the same name that this folder has, i.e., "PM566-lab05".
 
-Not a term/command actually available in Git, forking is a feature available in
-Github (as in other services) that allows users to create copies of other people's
-projects to propose changes (i.e. make **pull requests**, i.e. "I have this
-great update to your project! Would you like to add it by *pulling it* into your
-repo?").
+4. Initialize the Git project, add the "README.Rmd" file, and make your first commit.
 
-To start you just need to use the Fork button available on the project you would
-like to contribute to[^githubmanualfork]:
+5. Add the repo you just created on GitHub.com to the list of remotes, and push your commit to origin while setting the upstream.
 
-[^githubmanualfork]: For more details, take a look at the [Forking Projects](https://guides.github.com/activities/forking/) article in GitHub guides.
-
-<figure>
-<img src="https://github-images.s3.amazonaws.com/help/bootcamp/Bootcamp-Fork.png" width="400px">
-<figcaption>Source: GitHub Help</figcaption>
-</figure>
-
-Once you "Fork" a project, GitHub will:
-
-1. Create a copy (using `git clone`) of that project in your account.
-
-2. Set up a pipeline to generate pull requests.
-
-<figure>
-<img src="https://github-images.s3.amazonaws.com/help/pull_requests/recently_pushed_branch.png" width="600px">
-<figcaption>Source: GitHub Help</figcaption>
-</figure>
-
-Once you have a copy of the project in your account, you can proceede by
-"downloading it" to your computer using the `git clone` command. For example, if
-your github user name is `statsnerd` and the original repository is `Spoon-Knife`
-(as in the example), you could use the following in your command line
-
-```shell
-cd a-place-where-you-want-to-download-the-thing
-git clone https://github.com/statsnerd/Spoon-Knife.git
-```
-
-And if you have your ssh credentials set up, you can do instead
-
-```shell
-cd a-place-where-you-want-to-download-the-thing
-git clone git@github.com:statsnerd/Spoon-Knife.git
-```
-
-This way you will get a copy of the repository in your local machine. Now, let's
-see how can we update the project!
-
-## Step 2: Modifying the corresponding line
-
-If you got the correct copy, you should find a very simple repository with only
-two files: `.gitignore` and `README.md`. The first file is just a reference file
-for git to know what things it should be "looking at" (checkout the lecture
-slides), so we will **ignore it** at this time (pun intended). The second file
-is the one that we will be playing with. The readme file, which happens to be
-a [Markdown](https://en.wikipedia.org/wiki/Markdown) file, contains, or at least
-will contain, your and your team members biographies. Here is what you need to
-do:
-
-1. Find the line with your name/student id number.
-
-2. In that single line (i.e. not spanning multiple lines), write something about
-yourself, e.g. "I am from XYZ, I love doing ABC, ...".
-
-3. (optional) if you feel like it, add at the beginning of the line a picture
-of yourself (or avatar) using either html or markdown. This will require you
-to include the figure in the repo (if you are not linking a web fig).
-
-4. Commit the changes and push the changes to your repo using `git commit` and
-`git push`, e.g.
+Most of the steps can be done using command line:
 
 ```sh
-git commit -a -m "[A short but meaningful message]"
-# git add [your-avatar.png] ... if you need to add a picture
-git push
+# Step 1
+cd ~/Documents
+mkdir PM566-lab05
+cd PM566-lab05
+
+# Step 2
+wget https://raw.githubusercontent.com/USCbiostats/PM566/master/content/assignment/05-lab.Rmd 
+mv 05-lab.Rmd README.md
+
+# Step 3
+# Happens on github
+
+# Step 4
+git init
+git add README.Rmd
+git commit -m "First commit"
+
+# Step 5
+git remote add origin git@github.com:[username]/PM566-lab05
+git push -u origin master
 ```
 
-You are now one step closer to make your first "pull request". We will see how
-that happens in the next part.
+You can also complete the steps in R (replace with your paths/username when needed)
+
+```r
+# Step 1
+setwd("~/Documents")
+dir.create("PM566-lab05")
+setwd("PM566-lab05")
+
+# Step 2
+download.file(
+  "https://raw.githubusercontent.com/USCbiostats/PM566/master/content/assignment/05-lab.Rmd",
+  destfile = "README.Rmd"
+  )
+
+# Step 3: Happens on Github
+
+# Step 4
+system("git init && git add README.Rmd")
+system('git commit -m "First commit"')
+
+# Step 5
+system("git remote add origin git@github.com:[username]/PM566-lab05")
+system("git push -u origin master")
+```
+
+Once you are done setting up the project, you can now start working with the MET data.
+
+## Setup in R
+
+1. Load the `data.table` (and the `dtplyr` and `dplyr` packages if you plan to work with those).
+
+2. Load the met data from https://raw.githubusercontent.com/USCbiostats/data-science-data/master/02_met/met_all.gz, and also the station data. For the later, you can use the code we used during lecture to pre-process the stations data:
+
+```{r stations-data, eval = FALSE}
+# Download the data
+stations <- fread("ftp://ftp.ncdc.noaa.gov/pub/data/noaa/isd-history.csv")
+stations[, USAF := as.integer(USAF)]
+
+# Dealing with NAs and 999999
+stations[, USAF   := fifelse(USAF == 999999, NA_integer_, USAF)]
+stations[, CTRY   := fifelse(CTRY == "", NA_character_, CTRY)]
+stations[, STATE  := fifelse(STATE == "", NA_character_, STATE)]
+
+# Selecting the three relevant columns, and keeping unique records
+stations <- unique(stations[, list(USAF, CTRY, STATE)])
+
+# Dropping NAs
+stations <- stations[!is.na(USAF)]
+
+head(stations, n = 4)
+```
+
+3. Merge the data as we did during the lecture.
+
+## Question 1: Representative station for the US
+
+What is the median station in terms of temperature, wind speed, and atmospheric pressure? Look for the three weather stations that best represent continental US using the `quantile()` function. Do these three coincide?
+
+```{r}
+
+```
 
 
-## Step 3: Do the pull request
+Knit the document, commit your changes, and Save it on GitHub. Don't forget to add `README.md` to the tree, the first time you render it.
 
-This is the final step. Overall, pull requests (PR) are as complex as the proposed
-changes are. The PR that you are about to make should go smoothly, yet, any time
-that you make a new PR, the changes should be able to be `merged` in the original
-repository without conflicts. Conflicts may only appear if the proposed changes
-are out-dated with respect to the main repository, meaning that the main repository
-was modified *after* your fork and your proposed changes cannot be merged without
-generating conflicts[^mergeconflicts]. For now, let's just look at the simple case.
+## Question 2: Representative station per state
 
-[^mergeconflicts]: More info about how to deal with conflicts in this very neat
-post on stackoverflow.com [How to resolve merge conflicts in Git](https://stackoverflow.com/questions/161813/how-to-resolve-merge-conflicts-in-git?page=1&tab=votes#tab-top).
-GitHub also has a way to solve conflicts in PRs, but this is only available to
-the admins of target repo. More info [here](https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/resolving-a-merge-conflict-on-github),
+Just like the previous question, you are asked to identify what is the most representative, the median, station per state. This time, instead of looking at one variable at a time, look at the euclidean distance.
 
+```{r}
 
-To create the PR, you just need to go to your online copy of the project and
-click on "Compare & pull request" link:
+```
 
-<figure>
-<img src="https://github-images.s3.amazonaws.com/help/pull_requests/recently_pushed_branch.png" width="600px">
-<figcaption>Source: GitHub Help</figcaption>
-</figure>
+Knit the doc and save it on GitHub.
 
-This will create a PR in the reference repository. GitHub will automatically
-analyze the PR and check whether merging the PR to the master branch will result
-in a conflict or not. If all is OK, then the owner/admin of the repository can
-merge the PR. Otherwise, if there's a conflict, you can go back to your local
-repo, make the needed changes, commit the changes, and push the changes to
-your copy on github. In this stage, the PR will automatically update to reflect
-the new changes you made in your copy of the project.
+## Question 3: In the middle?
 
-For more information checkout [Creating a pull request from a fork
-](https://help.github.com/en/github/collaborating-with-issues-and-pull-requests/creating-a-pull-request-from-a-fork)
-on GitHub.
+For each state, identify what is the station that is closest to the mid-point of the state. Combining these with the stations you identified in the previous question, use `leaflet()` to visualize all ~100 points in the same figure, applying different colors for those identified in this question.
 
+```{r}
 
-# Using GitHub classrooms
-
-When you start work on an exercises or assignment, you will need to complete the
-following steps:
-
-1. Accept the invitation to the assignment that you will receive (by email, I
-   think)
-
-2. Link the assignment to your Github ID (github will automatically ask you to
-   do this and help you get it done).
-
-3. Downoad the pseudocode (if there is any for that problem). The simplest way
-   to do this using RStudio is shown in the "Hello World" exercise that we will
-   be doing at the start of class on Week 1.
-
-4. As you are working on the problem, regularly "commit" your work. I will not
-   be able to see what you are doing, and comment on it, until you "push" the
-   work back to Github. Get into the habit of committing regularly.
-
-5. Once you have completed your work on that problem you need to "commit" you
-   work and then push it to github one final time.
-    
-    For each assignment there will be a Github issue
-    [here](https://github.com/PM520-Spring-2020/General-course-info/issues)
-    which you are required to reference when submitting the final version of
-    your assignment. This way I will be notified that your's is ready to be
-    reviewed. In order to use this functionallity, you can:
-    
-    - Add the full URL in the commit message or in a new comment like this:
-      `https://github.com/PM520-Spring-2020/General-course-info/issues/1`, or
-       
-    - Add a short version of it like this: `PM520-Spring-2020/General-course-info#1`
-    
-    For more information about automatic cross-reference links, take a look at
-    the Github documentation
-    [here](https://help.github.com/en/github/writing-on-github/autolinked-references-and-urls)
-
-
-## Testing out GitHub Classrooms
-
-The excercise is simple. You should either had received an email or directly
-forked the assignment from the course's [GitHub classroom website](UPS?). The
-excercise consists on the following:
-
-1. Setup the assignment repo following the instructions above.
-
-2. Clone the repo in your computer using `git clone`.
-
-3. Go and edit the `README.md` file in the repository. The `README.md` file
-   should have the following contents:
-   
-   ```markdown
-   # Getting to know you a bit more
-   
-   1. What is your favorite book?
-   
-   2. What is your favorite movie?
-   
-   3. What is your favorite kind of music?
-   
-   4. What would you like to learn from this class?
-   ```
-   
-   Answer the questions in the same `README.md` file.
-   
-4. Once you are done answering the questions, commit the changes and push them
-   to GitHub. The commit message should include a reference to the following
-   issue LINK TO THE ISSUE.
-
-And you are done!
-
-<!-- --- -->
-
-<!-- This set of lab exersixes have been adopted from [Mine Çetinkaya-Rundel](https://twitter.com/minebocek)'s class [Introduction to Data Science](https://github.com/ids-s1-19). -->
+```
 
